refactor: change favicon

--- a/src/app.html
+++ b/src/app.html
@@ -3,7 +3,7 @@
 	<head>
 		<meta charset="utf-8" />
 		<meta name="Healthcare Infrastructure and Protocol for Web 3.0" content="Hippocrades Website" />
-		<link rel="icon" href="%svelte.assets%/favicon.ico" />
+		<link rel="icon" href="%svelte.assets%/img/favicon.png" />
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
 		%svelte.head%
 	</head>
